# lease-version-reliability

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Dockerfile.train  Makefile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.circleci/: config.yml
.docker/: Dockerfile
batch/: README.md  main.py
batch/common/: file_io.py
batch/config/: settings.py
batch/data/: database.py  database_io.py  output_data.py
batch/data/query/: insert_submitter_df.sql  insert_version_df.sql  merge_submitter_df.sql  merge_version_df.sql  submitter_df.sql  submitter_info.sql  version_df.sql
notebooks/: import_snowflake.ipynb  memory.ipynb  test.ipynb  testWithPoetry.ipynb  test_update.ipynb  upload_data.ipynb  withPoetry.ipynb
server/: README.md  app.py
server/api/: router.py
server/api/endpoints/: exchange.py  healthcheck.py  token.py
server/api/schemas/: token.py
server/config/: settings.py
server/data/: database.py
src/lease_version_reliability/: main.py
src/lease_version_reliability/common/: file_io.py  logging.py
src/lease_version_reliability/config/: attributes.py  settings.py
src/lease_version_reliability/data/: database.py  database_io.py  output_data.py
src/lease_version_reliability/data/query/: all_data.sql  reliable_data.sql  reliable_data_by_attribute.sql  reliable_data_version_ids  reliable_data_version_ids.sql  submission_logo.sql  version_max_id.sql
src/lease_version_reliability/features/: build_features.py
src/lease_version_reliability/models/: inference.py  train.py
tests/: test_logging.py  test_main.py  test_settings.py
train/: train.py
train/common/: file_io.py  logging.py
train/config/: settings.py
train/data/: database.py  database_io.py  dataset.py  output_data.py
train/data/query/: reliable_data.sql  reliable_data_by_attribute.sql
train/features/: features.py
train/model/: model.py
