[tool.poetry]
name = "lease-version-reliability"
version = "0.0.0"
description = "Lease version reliability score prediction service"
authors = ["Sagarkpatel <sagarpatel@compstak.com>"]
license = "Proprietary"
readme = "README.md"
repository = "https://github.com/compstak/lease-version-reliability"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9, <3.12"
rich = "*"
typer = { version = "*", extras = ["all"] }
structlog = "^22.3.0"
pydantic = { version = "*", extras = ["dotenv"] }
databases = { version = "^0.7.0", extras = ["mysql"] }
scikit-learn = "1.2.1"
pandas = "^1.3.4"
boto3 = "^1.26.62"
snowflake-connector-python = { version = "*", extras = ["pandas"]}
jellyfish = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
hypothesis = "*"
pre-commit = "*"
nox-poetry = "*"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
ipykernel = "*"
jupyter = "*"
jupyter_contrib_nbextensions = "*"
tqdm = "*"

[tool.poetry.group.type_check]
optional = true

[tool.poetry.group.type_check.dependencies]
mypy = "*"
types-python-dateutil = "*"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "*"
flake8-bugbear = "*"
flake8-broken-line = "*"
flake8-comprehensions = "*"
flake8-pyproject = "*"
pep8-naming = "*"

[tool.poetry.group.fmt]
optional = true

[tool.poetry.group.fmt.dependencies]
black = "*"
isort = "*"

[tool.poetry.scripts]
lease_version_reliability = "lease_version_reliability.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203"]
extend-immutable-calls = ["Argument"]

[tool.black]
line-length = 80
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
line_length = 80
force_sort_within_sections = true
skip_gitignore = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
# fail_under = 100
